--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
-    <string name="app_name">starter</string>
+    <string name="app_name">Starter</string>
+    <string name="about_us">About us</string>
+    <string name="more_apps">More apps</string>
+    <string name="rate">Rate</string>
+    <string name="update">Update</string>
+    <string name="share">Share</string>
+    <string name="exit">Exit</string>
+    <string name="change_style">Change style</string>
+    <string name="website">Website</string>
+    <string name="email">Email</string>
+    <string name="facebook">Facebook</string>
+    <string name="phone">Phone</string>
+    <string name="version">Version - </string>
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="test_interstitial_ads_unit_id">ca-app-pub-3940256099942544/1033173712</string>
 </resources>
