--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="youtube">Youtube</string>
     <string name="wikibooks">Wikibooks</string>
     <string name="pinterest">Pinterest</string>
+    <string name="search">Search</string>
 </resources>
