save all changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">English 1000 Common Phrases</string>
+    <string name="app_name">English Common Phrases</string>
     <string name="about_us">About us</string>
     <string name="more_apps">More apps</string>
     <string name="rate">Rate</string>
