--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="wikibooks">Wikibooks</string>
     <string name="pinterest">Pinterest</string>
     <string name="search">Search</string>
+    <string name="communication_at_bar">Communication at Bar</string>
 </resources>
